chore: added eslint

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "lint": "eslint src/** --fix",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -22,6 +23,9 @@
   "devDependencies": {
     "@types/jest": "^25.1.1",
     "@types/node": "^13.7.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.1.0",
     "typescript": "^3.7.5"
