--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
         run: npm ci
+      - name: Linting
+        run: npm run lint
       - name: Unit testing
         run: npm test
 #      - name: Upload coverage to Codecov
